# MCAs

./: README.md
MCAconfigfiles/: MCA_config.json
kromek/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
kromek/ConsoleExample/: Makefile  cmake_install.cmake  console.c
kromek/K102/: CMakeLists.txt  ConsoleExample  K102  K102.c  Makefile  cmake_install.cmake  console.c~  test
kromek/KromekDriver/: Makefile  cmake_install.cmake
kromek/SpectrometerDriver/: DriverMgr.cpp  DriverMgr.cpp~  Makefile  cmake_install.cmake
kromek/SpectrometerExample/: #mainwindow.cpp#  Makefile  SpectrometerExample  cmake_install.cmake  moc_QTableWidgetDeviceItem.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_qcustomgraph.cpp  moc_qcustomgraph.cpp_parameters  ui_mainwindow.h
root_macros/: DrawMCA.C  DrawMCAs.C  DrawMCAs.C~  MonMCA.C  hist_comp.C  hist_comp.C~
scripts/: K102.py  K102.py~  mca8000d.py  mca8000d.py~  runMCA.py  runMCA.py~
